--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
+    "@mui/styled-engine-sc": "^6.1.4",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "countries-list": "^3.1.0",
-    "mdb-react-ui-kit": "^8.0.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "mdbreact": "^5.2.0",
     "primeicons": "^7.0.0",
+    "primereact": "^10.8.4",
     "rc-slider": "^11.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -32,6 +39,7 @@
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.2",
     "web-vitals": "^4.2.2"
   },
