--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.4",
+    "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "countries-list": "^3.1.0",
+    "framer-motion": "^11.11.9",
     "mdb-react-ui-kit": "^9.0.0",
     "mdbreact": "^5.2.0",
     "primeicons": "^7.0.0",
@@ -47,11 +49,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "tailwindcss": "^3.4.6",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.3.4"
   }
 }
