--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "countries-list": "^3.1.0",
     "framer-motion": "^11.11.9",
     "mdb-react-ui-kit": "^9.0.0",
