--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap-icons": "^1.11.3",
     "countries-list": "^3.1.0",
     "framer-motion": "^11.11.9",
+    "javascript-time-ago": "^2.5.11",
     "mdb-react-ui-kit": "^9.0.0",
     "mdbreact": "^5.2.0",
     "primeicons": "^7.0.0",
