--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,34 +17,28 @@
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.4",
     "@nextui-org/react": "^2.4.8",
-    "axios": "^1.7.2",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "countries-list": "^3.1.0",
+    "countries-list": "^3.1.1",
     "framer-motion": "^11.11.9",
     "javascript-time-ago": "^2.5.11",
     "mdb-react-ui-kit": "^9.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
-    "rc-slider": "^11.0.5",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-js-pagination": "^3.0.3",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.1",
-    "react-select": "^5.8.0",
+    "react-router-dom": "^7.0.2",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.14.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.12.2",
-    "web-vitals": "^4.2.2"
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
